# bb_equipment_tf_publisher

./: CMakeLists.txt  package.xml
config/: bb_equipment_mixed_transforms.yaml  bb_equipment_static_transforms.yaml  carecules_005_equipment_transforms.yaml  carecules_011_equipment_transforms.yaml  fa_linux_pc_equipment_transforms.yaml
include/bb_equipment_tf_publisher/: bb_equipment_tf_marker_server.h  bb_equipment_tf_publisher.h  bb_equipment_tf_publisher_node.h
launch/: bb_equipment_tf_publisher.launch  bb_equipment_tf_publisher_kinect_standalone.launch
src/: bb_equipment_tf_marker_server.cpp  bb_equipment_tf_publisher.cpp  bb_equipment_tf_publisher_node.cpp  bb_tf_equipment_publisher.cpp
srv/: MapOdomBaseLinkTfs.srv  ParkingPosition.srv  StaticTfUpdate.srv  StaticTfs.srv  Waypoints.srv
